--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/NickBulbeck/Week10Weekend/issues"
   },
-  "homepage": "https://github.com/NickBulbeck/Week10Weekend#readme"
+  "homepage": "https://github.com/NickBulbeck/Week10Weekend#readme",
+  "devDependencies": {
+    "mocha": "^3.4.2"
+  }
 }
