--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/NickBulbeck/Week10Weekend#readme",
   "devDependencies": {
     "mocha": "^3.4.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.4"
   }
 }
